[fix] scrolltop z-index

--- a/src/components/Buttons/styles/ScrollTopButton.scss
+++ b/src/components/Buttons/styles/ScrollTopButton.scss
@@ -31,5 +31,5 @@
     transform: translateY(-0.1875rem);
   }
 
-  z-index: 1000;
+  z-index: 995;
 }
